--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qris-dynamicify",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Transform static QRIS into dynamic QRIS effortlessly. Designed for modern payment integrations in Indonesia.",
   "keywords": [
     "qris",
@@ -20,9 +20,11 @@
     "type": "git",
     "url": "git+https://github.com/XanderID/qris-dynamicify.git"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "author": "XanderID",
   "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "browser": "dist/browser/qris-dynamicify.js",
   "types": "dist/types/index.d.ts",
   "files": [
     "dist/"
@@ -37,30 +39,35 @@
         "types": "./dist/types/index.d.ts",
         "default": "./dist/cjs/index.js"
       },
-      "default": "./dist/esm/index.js"
+      "browser": {
+        "types": "./dist/types/index.d.ts",
+        "default": "./dist/browser/qris-dynamicify.js"
+      }
     }
   },
   "scripts": {
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:esm": "tsc -p tsconfig.json",
-    "build": "npm run build:cjs && npm run build:esm",
+    "build:browser": "vite build",
+    "build:all": "npm run build:cjs && npm run build:esm && npm run build:browser",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "jimp": "^1.6.0",
+    "jimp": "^0.22.12",
     "jsqr": "^1.4.0",
-    "qrcode": "^1.5.4",
-    "ts-node": "^10.9.2"
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
-    "@types/jimp": "^0.2.1",
-    "@types/node": "^24.5.2",
+    "@types/bun": "^1.2.23",
+    "@types/node": "^20.14.12",
     "@types/qrcode": "^1.5.5",
-    "@typescript-eslint/eslint-plugin": "^8.44.1",
-    "@typescript-eslint/parser": "^8.44.1",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "eslint": "^9.36.0",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.1"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.45.0",
+    "vite": "^5.3.5"
   }
 }
