--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,10 +1,16 @@
 {
   "compilerOptions": {
+    "target": "ES2019",
     "module": "CommonJS",
     "moduleResolution": "Node",
     "outDir": "dist/cjs",
+    "rootDir": "src",
     "esModuleInterop": true,
+    "declaration": true,
+    "declarationDir": "dist/types",
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "vite.config.ts"]
 }
